# hpc_results_v3.0

./: README.md
Clemson/benchmarks/deepcam/implementations/pytorch/: Dockerfile  LICENSE  README.md  bind.sh  init_datasets.sub  run.slurm  run_and_time_multi.sh
Clemson/benchmarks/openfold/implementations/18xR750-2xA100-PCIe-80GB/: README.md
Clemson/benchmarks/openfold/implementations/pytorch/: multi_node_training.sub  setup.py
Clemson/results/18xR750-2xA100-PCIe-80GB/strong/deepcam/: result_0.txt  result_1.txt  result_2.txt  result_3.txt  result_4.txt
Clemson/results/18xR750-2xA100-PCIe-80GB/strong/openfold/: result_0.txt  result_1.txt  result_2.txt  result_3.txt  result_4.txt  result_5.txt  result_6.txt  result_7.txt  result_8.txt  result_9.txt  scaling.json
Clemson/systems/: 18xR750-2xA100-PCIe-80GB.json
Dell/: README.md
Dell/benchmarks/deepcam/implementations/32XE8545-4xA100-SXM4-40GB/: README.md
Dell/benchmarks/deepcam/implementations/pytorch/: Dockerfile  cleanup.sh  generate_readmes.sh  run.slurm  run.sub  run_and_time.sh  run_and_time_multi.sh  wandb_cert.key
Dell/results/32xXE8545x4A100-SXM4-40GB/strong/deepcam/: result_0.txt  result_1.txt  result_2.txt  result_3.txt  result_4.txt
Dell/systems/: 32xXE8545x4A100-SXM4-40GB.json
Fujitsu+RIKEN/benchmarks/cosmoflow/implementations/fugaku_512xA64FX_tensorflow/: run_and_time.sh
Fujitsu+RIKEN/benchmarks/cosmoflow/implementations/fugaku_82944xA64FX_tensorflow/: README.md  fugaku_82944xA64FX_tensorflow_closed_implementation_fugaku_closed.json  init_datasets.sh  setup.sh
Fujitsu+RIKEN/benchmarks/cosmoflow/implementations/implementation_fugaku/: setenv
Fujitsu+RIKEN/results/fugaku_512xA64FX_tensorflow_closed/strong/cosmoflow/: result_1.txt  result_10.txt  result_2.txt  result_3.txt  result_4.txt  result_5.txt  result_6.txt  result_7.txt  result_8.txt  result_9.txt
Fujitsu+RIKEN/results/fugaku_512xA64FX_tensorflow_open/strong/cosmoflow/: result_1.txt  result_3.txt  result_4.txt  result_7.txt  result_8.txt
Fujitsu+RIKEN/results/fugaku_82944xA64FX_tensorflow_closed/weak/cosmoflow/: result_1.txt  result_10.txt  result_100.txt  result_101.txt  result_102.txt  result_103.txt  result_104.txt  result_105.txt  result_106.txt  result_107.txt  result_108.txt  result_109.txt  result_11.txt  result_110.txt  result_111.txt  result_112.txt  result_113.txt  result_114.txt  result_115.txt  result_116.txt  result_117.txt  result_118.txt  result_119.txt  result_12.txt  result_120.txt  result_121.txt  result_122.txt  result_123.txt  result_124.txt  result_125.txt  result_126.txt  result_127.txt  result_128.txt  result_129.txt  result_13.txt  result_130.txt  result_131.txt  result_132.txt  result_133.txt  result_134.txt  (+597 more)
Fujitsu+RIKEN/results/fugaku_82944xA64FX_tensorflow_open/weak/cosmoflow/: result_10.txt  result_11.txt  result_12.txt  result_13.txt  result_14.txt  result_15.txt  result_16.txt  result_17.txt  result_18.txt  result_19.txt  result_2.txt  result_20.txt  result_21.txt  result_22.txt  result_23.txt  result_24.txt  result_25.txt  result_26.txt  result_27.txt  result_28.txt  result_29.txt  result_30.txt  result_31.txt  result_32.txt  result_33.txt  result_34.txt  result_35.txt  result_36.txt  result_37.txt  result_38.txt  result_39.txt  result_40.txt  result_41.txt  result_42.txt  result_43.txt  result_44.txt  result_45.txt  result_46.txt  result_47.txt  result_48.txt  (+36 more)
Fujitsu+RIKEN/systems/: fugaku_512xA64FX_tensorflow_closed.json  fugaku_512xA64FX_tensorflow_open.json  fugaku_82944xA64FX_tensorflow_closed.json  fugaku_82944xA64FX_tensorflow_open.json
HPE+LBNL/benchmarks/cosmoflow/implementations/cosmoflow-mxnet-v1.0/: run_and_time.sh  run_pm.sub
HPE+LBNL/benchmarks/cosmoflow/implementations/cosmoflow-pytorch/: Dockerfile  README.md  build_docker.sh  main.py  optimizer.py  requirements.txt  run_and_time.sh  run_pm.sub  shell_commands.sh  submit.sh  trainer.py
HPE+LBNL/benchmarks/cosmoflow/implementations/cosmoflow-pytorch/utils/csrc/: CMakeLists.txt
HPE+LBNL/benchmarks/cosmoflow/implementations/cosmoflow-pytorch/utils/csrc/src/: aio_handler.cc  aio_handler.hh  common.hh  file_direct.cc  file_direct.hh  main.cc
HPE+LBNL/benchmarks/cosmoflow/implementations/perlmutter_10x128x4_ngc21.09_mxnet/: README.md
HPE+LBNL/benchmarks/cosmoflow/implementations/perlmutter_128x4/: README.md
HPE+LBNL/benchmarks/deepcam/implementations/deepcam-pytorch/: Dockerfile  LICENSE  README_template.md  run_and_time.sh  run_pm.sub
HPE+LBNL/benchmarks/deepcam/implementations/deepcam-pytorch-v1.0/: run_and_time.sh  run_pm.sub
HPE+LBNL/benchmarks/deepcam/implementations/perlmutter_10x128x4_ngc21.09_pytorch/: README.md
HPE+LBNL/benchmarks/deepcam/implementations/perlmutter_512x4/: README.md
HPE+LBNL/benchmarks/oc20/implementations/opencatalyst-pytorch/: Dockerfile  README.md  README_dgxh100_80x8x4_ngc23.09_pytorch.md  README_dgxh100_8x8x16_ngc23.09_pytorch.md  preprocess.sh  requirements.txt  run_and_time.sh  run_pm.sub  setup.py  shell_commands.sh  submit.sh
HPE+LBNL/benchmarks/oc20/implementations/opencatalyst-pytorch/cugraph-ops-binding/: CMakeLists.txt  binding.cpp  torch_utils.hpp
HPE+LBNL/benchmarks/oc20/implementations/perlmutter_128x4/: README.md
HPE+LBNL/benchmarks/openfold/implementations/openfold-pytorch/: Dockerfile  README.md  pm_bind_map.sh  run_and_time_pm.sh  run_pm.sub  submit.sh  train.py
HPE+LBNL/benchmarks/openfold/implementations/perlmutter_224x4/: README.md
HPE+LBNL/results/perlmutter_10x128x4_ngc21.09_mxnet/weak/cosmoflow/: result_1.txt  result_10.txt  result_2.txt  result_3.txt  result_4.txt  result_5.txt  result_6.txt  result_7.txt  result_8.txt  (+1 more)
HPE+LBNL/systems/: perlmutter_10x128x4_ngc21.09_mxnet.json  perlmutter_10x128x4_ngc21.09_pytorch.json  perlmutter_128x4.json  perlmutter_12x128x4.json  perlmutter_224x4.json  perlmutter_256x4.json  perlmutter_512x4.json
NVIDIA/: README.md
NVIDIA/systems/: eos_n256_ngc23.09_pytorch.json  eos_n260_ngc23.09_pytorch.json  eos_n64_ngc23.09_pytorch.json  eos_n80_ngc23.09_pytorch.json  template.json
TACC/systems/: lonestar6-pytorch.json
(+724 files in other folders)
